--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -6,7 +6,7 @@
       <mat-icon> logout</mat-icon>
     </button>
   </mat-toolbar>
-  <div style="display: flex; align-items: center; justify-content: center; flex-direction: column;">
+  <div style="display: flex; align-items: center; justify-content: center; flex-direction: column; padding: 1rem;">
     <h1>Bem Vindo ao FREAFMIGS GTABULES</h1>
     <h3>Aqui vc vai encontrar informações de qualquer jogo de futebol</h3>
     <app-countries></app-countries>
