--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -7,8 +7,8 @@
     </button>
   </mat-toolbar>
   <div style="display: flex; align-items: center; justify-content: center; flex-direction: column; padding: 1rem;">
-    <h1>Bem Vindo ao FREAFMIGS GTABULES!</h1>
-    <h3>Aqui vc vai encontrar informações de qualquer jogo de futebol</h3>
+    <h1>Bem Vinde ao FREAFMIGS GTABULES!</h1>
+    <h3>Aqui você vai encontrar informações de qualquer jogo de futebol</h3>
     <button mat-raised-button color="primary" (click)="changeComponentStatus('countries')">
       Start
       <span class="material-icons">
@@ -22,7 +22,13 @@
       <app-leagues [countrySelected]="countrySelected" (leagueSelected)="selectionLeague($event)"></app-leagues>
     </div>
     <div *ngIf="this.showComponent[2].status">
-      <app-seasons [leagueSelected]="leagueSelected"></app-seasons>
+      <app-seasons [leagueSelected]="leagueSelected" (seasonSelected)="selectionSeason($event)"></app-seasons>
+    </div>
+    <div *ngIf="this.showComponent[3].status">
+      <app-teams [seasonSelected]="seasonSelected" [leagueSelected]="leagueSelected" (teamSelected)="selectionTeam($event)" ></app-teams>
+    </div>
+    <div *ngIf="this.showComponent[4].status">
+      <app-statistics></app-statistics>
     </div>
   </div>
   <mat-toolbar color="primary" class="example-footer">
