--- a/src/app/shared/components/countries/countries.component.html
+++ b/src/app/shared/components/countries/countries.component.html
@@ -1,5 +1,5 @@
 <div style="text-align: center;">
-  <h3>Selecione um país</h3>
+  <h3>Selecione um País</h3>
   <!-- <button mat-raised-button color="primary" (click)="findCountries()">
     Países
     <span class="material-icons">
