--- a/src/app/shared/components/leagues/leagues.component.html
+++ b/src/app/shared/components/leagues/leagues.component.html
@@ -1,5 +1,5 @@
 <div style="text-align: center;">
-  <h3>Selecione um campeonato: </h3>
+  <h3>Selecione um Campeonato </h3>
   <div class="container">
     <div *ngFor="let league of arrayLeagues" class="content_country">
       <mat-card class="card_country" (click)="selectLeague(league)">
